chore: update .proto

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Server",
+      "name": "grpc: Server",
       "skipFiles": [
         "<node_internals>/**"
       ],
