--- a/event-stream/docker-compose.yml
+++ b/event-stream/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   mongodb:
-    image: mongo
+    image: mongo:6.0-focal
     restart: always
     ports:
       - "27017:27017"
