--- a/event-stream/package.json
+++ b/event-stream/package.json
@@ -21,6 +21,12 @@
     "mongoose": "^7.0.3"
   },
   "devDependencies": {
+    "cz-conventional-changelog": "^3.3.0",
     "nodemon": "^2.0.22"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
