--- a/event-stream/package.json
+++ b/event-stream/package.json
@@ -18,7 +18,9 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jquery": "^3.6.4",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
